# pharmacopoeia-rag

./: .env  .env.example  .gitignore  pyproject.toml
src/: basic_rag.py  chat_interface.py  config.py  document_loader.py  vector_store.py
