[project]
name = "pharmacopoeia-rag"
version = "0.1.0"
description = "智能药典助手 - 基于 LangChain + ChromaDB 的 RAG 系统"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "J Nope"}
]
dependencies = [
    "chromadb>=1.5.9",
    "gradio>=6.17.3",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "loguru>=0.7.3",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "pypdf>=6.13.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true

[project.scripts]
pharm = "src.chat_interface:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
